# AI-Speech-Analysis

./: .gitignore  ALL_SPEAKER_LABELS_FIXED.txt  DEMO_FIXED.md  DEMO_FIX_GUIDE.md  DEMO_MODE_IMPLEMENTATION.md  DEMO_SETUP_QUICKSTART.md  DEMO_TESTING_GUIDE.md  DOCS_UPDATED.md  GENERATE_DEMO_DATA_GUIDE.md  LAYOUT_FIXED.txt  README.md  RESTART_AND_TEST.txt  RUN_DEMO_NOW.txt  SPEAKER_LABEL_FIXED.txt  START_DEMO_NOW.md  docker-compose.dev.yml  docker-compose.yml  readme2.txt
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  generate_demo_data.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_add_clinical_narrative.py
backend/app/: __init__.py  dependencies.py  main.py
backend/app/config/: __init__.py  settings.py
backend/app/core/: __init__.py  exceptions.py  logging.py  rate_limit.py  security.py
backend/app/database/: __init__.py  base.py  init_db.py  session.py
backend/app/models/: __init__.py  audio_file.py  audit_log.py  enums.py  job.py  prediction.py  report.py  speaker.py  transcription.py  user.py
backend/app/routers/: admin.py  auth.py  demo.py  demo_data.json  health.py  jobs.py  reports.py  results.py  upload.py
backend/app/schemas/: admin.py  audio.py  auth.py  common.py  job.py  report.py  results.py  user.py
backend/app/services/: __init__.py  auth_service.py  job_service.py  report_generator.py  storage.py  supabase_client.py
backend/app/services/ml/: __init__.py  atypicality_classifier.py  clinical_narrative.py  explainability.py  feature_extraction.py  gender_age_classifier.py  hf_gender_age.py  llm_gender_age.py  pipeline.py  registry.py  speaker_diarization.py  transcription.py  types.py
backend/app/tasks/: celery_app.py  dispatch.py  pipeline_tasks.py
backend/app/utils/: audio.py  files.py  timestamp.py
backend/tests/: conftest.py  test_auth.py  test_llm_gender_age.py  test_ml_services.py  test_pipeline.py  test_upload.py  test_utils.py
docs/: API.md  ARCHITECTURE.md  batch_diagnostic_report (1).csv
frontend/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  (+3 more)
(+59 files in other folders)
